package com.smartlib;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SmartLibraryApp {
    public static void main(String[] args) {
        SpringApplication.run(SmartLibraryApp.class, args);
    }
}
